Fix bug 152528: high CPU usage after waking from sleep. This patch disables timer firing between sleep and wake notifications, and forces the timer thread to readjust the timer calibration after wake.